Play unused audio: Laura's letter

--- a/Common/Settings.ini
+++ b/Common/Settings.ini
@@ -146,6 +146,9 @@ FlashlightToggleSFX = 1
 ; Plays an alternate, cut audio track for the VHS tape FMV. We recommend to only enable this after beating the game at least once. Note: You must have the correct version of this FMV that contains both audio tracks. If you do not, then only the original audio will play. You can obtain the correct version of this FMV by downloading the project's FMV Enhancement Pack.
 VHSAudioFix = 0
 
+; In the cutscene where James reads Laura's letter, the unused audio of Mary reading the letter will play.
+PlayUnusedAudio = 0
+
 [Controller]
 ; Restores right joystick functionality for controllers to move the search camera around. Change the setting depending on what type of controller you are using. Note: If using Xidi (controller support software), set this option to "DirectInput".
 RestoreSearchCamMovement = 2
