--- a/sh2-enhce.vcxproj
+++ b/sh2-enhce.vcxproj
@@ -230,6 +230,7 @@ copy /Y "$(ProjectDir)Resources\SH2EEsetup.exe" "$(TargetDir)" &gt;nul</Command>
     <ClCompile Include="Patches\FmvSubtitles.cpp" />
     <ClCompile Include="Patches\MusicBoxVolume.cpp" />
     <ClCompile Include="Patches\OptionsMenuTweaks.cpp" />
+    <ClCompile Include="Patches\PlayUnusedAudio.cpp" />
     <ClCompile Include="Patches\PuzzleAlignmentFixes.cpp" />
     <ClCompile Include="Patches\MenuSounds.cpp" />
     <ClCompile Include="Patches\MothDrawOrder.cpp" />
@@ -384,6 +385,7 @@ copy /Y "$(ProjectDir)Resources\SH2EEsetup.exe" "$(TargetDir)" &gt;nul</Command>
     <ClInclude Include="Patches\FullscreenImages.h" />
     <ClInclude Include="Patches\InputTweaks.h" />
     <ClInclude Include="Patches\OptionsMenuTweaks.h" />
+    <ClInclude Include="Patches\PlayUnusedAudio.h" />
     <ClInclude Include="Patches\PuzzleAlignmentFixes.h" />
     <ClInclude Include="Patches\ModelID.h" />
     <ClInclude Include="Patches\Patches.h" />
